--- a/manifest.json
+++ b/manifest.json
@@ -1,14 +1,11 @@
 {
-"manifest_version": 2,
-"name": "My First Extension",
-"version": "1.0",
-"description": "The first extension that I made.",
-"browser_action": {
-"default_icon": "icon.png",
-"default_title": "Google Mail",
-"default_popup": "popup.html"
-},
-"permissions": [
-"tabs"
-]
+    "name": "My First Extension",
+    "manifest_version": 2,
+    "version": "1.0",
+    "description": "The first extension that I made.",
+    "browser_action": {
+        "default_icon": "icon.png",
+        "default_title": "Google My Task List",
+        "default_popup": "popup.html"
+    }
 }
