--- a/manifest.json
+++ b/manifest.json
@@ -7,6 +7,6 @@
         //"default_icon": "icon.png",
         "default_title": "Google My Task List",
         "default_popup": "first_self/popup.html"
-    },
-    "content_security_policy": "script-src 'self' 'unsafe-eval'; object-src 'self'"
+    }
+    //"content_security_policy": "script-src 'self' 'unsafe-eval'; object-src 'self'"
 }
